Improve link styles

--- a/www/html/css.html
+++ b/www/html/css.html
@@ -768,7 +768,7 @@
                 organique), SMACSS (architecture évolutive et modulaire pour CSS) et <a class="link" href="#BEM">BEM</a> (bloc,
                 élément, modificateur).
             </p>
-            <a href="#top" class="to-top">HAUT</a>
+            <a href="#top" class="to-top link">HAUT</a>
         </article>
     </section>
 </main>
