--- a/www/html/html.html
+++ b/www/html/html.html
@@ -397,7 +397,7 @@
                 toujours été respectée au cours du développement du langage, comme en témoigne par exemple le balisage
                 de style de texte, qui permet d’indiquer notamment la police de caractères souhaitée pour l’affichage,
                 sa taille ou sa couleur.</p>
-            <a href="#top" class="to-top">HAUT</a>
+            <a href="#top" class="to-top link">HAUT</a>
         </article>
     </section>
 </main>
