--- a/www/html/js.html
+++ b/www/html/js.html
@@ -61,60 +61,60 @@
             </p>
             <ol>
                 <li>
-                    <a href="#Histoire">Histoire</a>
+                    <a class="link" href="#Histoire">Histoire</a>
                     <ol>
-                        <li><a href="#Debut">Debut</a></li>
+                        <li><a class="link" href="#Debut">Debut</a></li>
                         <li>
-                            <a href="#Standardisation">Standardisation</a>
+                            <a class="link" href="#Standardisation">Standardisation</a>
                             <ol>
                                 <li>
-                                    <a href="#Version-1">Version 1 : Naissance du standard ECMA-262</a>
+                                    <a class="link" href="#Version-1">Version 1 : Naissance du standard ECMA-262</a>
                                 </li>
                                 <li>
-                                    <a href="#Version-2">Version 2 : Homogénéisation avec le standard ISO/CEI 16262</a>
+                                    <a class="link" href="#Version-2">Version 2 : Homogénéisation avec le standard ISO/CEI 16262</a>
                                 </li>
                                 <li>
-                                    <a href="#Version-3">Version 3 : Améliorations et constitution du langage</a>
+                                    <a class="link" href="#Version-3">Version 3 : Améliorations et constitution du langage</a>
                                 </li>
                                 <li>
-                                    <a href="#Version-4">Version 4 : L'étape inachevée</a>
+                                    <a class="link" href="#Version-4">Version 4 : L'étape inachevée</a>
                                 </li>
                                 <li>
-                                    <a href="#Version-5">Version 5 : Désambiguïsation et nouvelles fonctionnalités</a>
+                                    <a class="link" href="#Version-5">Version 5 : Désambiguïsation et nouvelles fonctionnalités</a>
                                 </li>
                                 <li>
-                                    <a href="#Version-6">Version 6 : Amélioration du support et des fonctionnalités</a>
+                                    <a class="link" href="#Version-6">Version 6 : Amélioration du support et des fonctionnalités</a>
                                 </li>
                                 <li>
-                                    <a href="#Version-7">De la version 7 à nos jours : une adaptation permanente aux
+                                    <a class="link" href="#Version-7">De la version 7 à nos jours : une adaptation permanente aux
                                         outils du web</a>
                                 </li>
                             </ol>
                         </li>
                     </ol>
                 </li>
-                <li><a href="#Securite">Sécurité</a></li>
+                <li><a class="link" href="#Securite">Sécurité</a></li>
                 <li>
-                    <a href="#Concepts-de-programmation">Concepts de programmation</a>
+                    <a class="link" href="#Concepts-de-programmation">Concepts de programmation</a>
                     <ol>
-                        <li><a href="#Hello-world">Hello world</a></li>
+                        <li><a class="link" href="#Hello-world">Hello world</a></li>
                     </ol>
                 </li>
-                <li><a href="#Utilisation">Utilisation</a>
+                <li><a class="link" href="#Utilisation">Utilisation</a>
                     <ol>
-                        <li><a href="#Dans-une-page-web">Dans une page web</a>
+                        <li><a class="link" href="#Dans-une-page-web">Dans une page web</a>
                             <ol>
-                                <li><a href="#Incompatibilite">Incompatibilité</a></li>
-                                <li><a href="#Ajax">Ajax</a></li>
-                                <li><a href="#JSON">JSON</a></li>
+                                <li><a class="link" href="#Incompatibilite">Incompatibilité</a></li>
+                                <li><a class="link" href="#Ajax">Ajax</a></li>
+                                <li><a class="link" href="#JSON">JSON</a></li>
                             </ol>
                         </li>
                     </ol>
                     <ol>
-                        <li><a href="#Autres-utilisations">Autres utilisations</a>
+                        <li><a class="link" href="#Autres-utilisations">Autres utilisations</a>
                             <ol>
-                                <li><a href="#Sur-un-serveur-web">Sur un serveur web</a></li>
-                                <li><a href="#Autres-supports">Autres supports</a></li>
+                                <li><a class="link" href="#Sur-un-serveur-web">Sur un serveur web</a></li>
+                                <li><a class="link" href="#Autres-supports">Autres supports</a></li>
                             </ol>
                         </li>
                     </ol>
@@ -409,7 +409,8 @@
                 directement exploitable dans un navigateur.
             </p>
             <p>Enfin, JavaScript est également utilisé pour dynamiser le QML de la bibliothèque graphique Qt.
-            </p><a href="#top" class="to-top">HAUT</a>
+            </p>
+            <a href="#top" class="to-top link">HAUT</a>
         </article>
     </section>
 </main>
