--- a/www/html/css.html
+++ b/www/html/css.html
@@ -709,7 +709,7 @@
                     qu'en fonction de son positionnement CSS n'est pas compréhensible pour leurs utilisateurs ;
                 </li>
                 <li>
-                    dans une démarche d'accessibilité fondée sur la pertinence de la structure <a
+                    dans une démarche d'accessibilité fondée sur la pertinence de la structure <a class ="link"
                         href="html.html">HTML</a>, l'éventail des possibilités de mise en forme de contenu avec CSS peut
                     faire perdre de vue la nécessité de baliser le contenu à l'aide d'éléments signifiants. Il est par
                     exemple possible de délimiter visuellement une citation en la mettant en italique ou en l'encadrant
