--- a/www/html/js.html
+++ b/www/html/js.html
@@ -124,16 +124,16 @@
             <h3 id="Debut">Début</h3>
             <p>Le langage a été créé en dix jours en mai 1995 pour le compte de la Netscape Communications Corporation
                 par Brendan Eich, qui s'est inspiré de nombreux langages, notamment de Java mais en simplifiant la
-                syntaxe pour les débutants10. Brendan Eich a initialement développé un langage de script côté serveur,
+                syntaxe pour les débutants. Brendan Eich a initialement développé un langage de script côté serveur,
                 appelé LiveScript, pour renforcer l'offre commerciale de serveur HTTP. Netscape travaille alors au
                 développement d'une version orientée client de LiveScript.
             </p>
             <p>Quelques jours avant sa sortie, Netscape change le nom de LiveScript pour JavaScript. Sun Microsystems et
                 Netscape étaient partenaires, et la machine virtuelle Java de plus en plus populaire. Ce changement de
-                nom servait les intérêts des deux sociétés. Le 4 décembre 1995 Netscape et Sun Microsystems annoncent11
+                nom servait les intérêts des deux sociétés. Le 4 décembre 1995 Netscape et Sun Microsystems annoncent
                 la sortie de JavaScript, décrit comme un complément à Java, dans un communiqué de presse commun. Cette
                 initiative a contribué à créer auprès du public une certaine confusion entre les deux langages, proches
-                syntaxiquement mais pas du tout dans leurs concepts fondamentaux, et qui perdure encore de nos jours12.
+                syntaxiquement mais pas du tout dans leurs concepts fondamentaux, et qui perdure encore de nos jours.
             </p>
             <p>En mars 1996, Netscape met en œuvre le moteur JavaScript dans son navigateur web Netscape Navigator 2.0.
                 Le succès de ce navigateur contribue à l'adoption rapide de JavaScript dans le développement web orienté
@@ -141,7 +141,7 @@
                 en août 1996 pour la sortie de son navigateur.
             </p>
             <p> «&nbsp;JavaScript&nbsp;» devient une marque déposée par Sun Microsystems aux États-Unis en mai
-                199713,14.
+                1997.
             </p>
             <h3 id="Standardisation">Standardisation</h3>
             <p>Netscape soumet alors JavaScript à Ecma International pour standardisation.
@@ -202,7 +202,7 @@
                 l'introduction de l'opérateur d'exponentiation et d'une nouvelle méthode pour les prototypes de
                 tableaux, la 7e édition est publiée en juin 2016.
             </p>
-            <p>L'édition actuelle du standard ECMA-262 est la 11ème édition publiée en juin 202015.
+            <p>L'édition actuelle du standard ECMA-262 est la 11ème édition publiée en juin 2020.
             </p>
             <h2 id="Securite">Sécurité</h2>
             <p>JavaScript et la structure DOM des pages HTML/XML ont quelques failles de sécurité. En effet, des scripts
@@ -225,7 +225,7 @@
             </p>
             <p>Certains sous-ensembles du langage Javascript tels que JavaScript—ADsafe ou Secure ECMAScript (SES)
                 fournissent de plus grands niveaux de sécurité, en particulier pour les scripts créés par des tierces
-                parties (notamment les publicités)16,17. Caja est un autre logiciel pour inclure et isoler de manière
+                parties (notamment les publicités). Caja est un autre logiciel pour inclure et isoler de manière
                 sécurisée du JavaScript et du <a class="link" href="html.html">HTML</a> tierce partie.
             </p>
             <p>La Politique de sécurité du contenu est la principale méthode destinée à assurer que seul un script de
@@ -242,7 +242,7 @@
             </p>
             <h3 id="Hello-world">Hello world</h3>
             <p>Il est possible dans un script en langage Javascript, d'afficher le texte hello world sur la console de
-                debug de l’application. Ceci peut être utilisé par des développeurs en phase de mise au point18. :
+                debug de l’application. Ceci peut être utilisé par des développeurs en phase de mise au point. :
             </p>
             <p class="code">window.console.log('Hello world');
                 <br>window.console.exp(hello world)
@@ -251,8 +251,8 @@
                 <br>window.console.log(hello world)
             </p>
 
-            <p>Dans une application hôte d'un navigateur, console est une des méthodes de l'objet global window19. Dans
-                d'autres applications hôtes comme Node.js, l'objet global est global20. Les méthodes de l'objet global
+            <p>Dans une application hôte d'un navigateur, console est une des méthodes de l'objet global window. Dans
+                d'autres applications hôtes comme Node.js, l'objet global est global. Les méthodes de l'objet global
                 étant accessibles sans préfixe, window et global sont facultatifs.
             </p>
             <p>La syntaxe
@@ -333,7 +333,7 @@
             </p>
             <p>Depuis 2009, les navigateurs commencent à intégrer un support natif du format JSON, ce qui facilite sa
                 manipulation, la sécurité (contre l'évaluation de scripts malveillants inclus dans une chaine JSON), et
-                la rapidité de traitement. Ainsi les navigateurs Firefox et IE21 l'intègrent respectivement dès les
+                la rapidité de traitement. Ainsi les navigateurs Firefox et IE l'intègrent respectivement dès les
                 versions 3.5 et 8.
             </p>
             <p>Exemple de JSON :
@@ -403,7 +403,7 @@
             </p>
             <p>La suite bureautique OpenOffice.org permet d'utiliser JavaScript comme langage de macros.
             </p>
-            <p>JavaScript est aussi utilisable en shell22 ou avec les gadgets Vista.
+            <p>JavaScript est aussi utilisable en shell ou avec les gadgets Vista.
             </p>
             <p>Le format graphique vectoriel SVG incorpore le langage ECMAscript pour créer des graphiques interactifs
                 directement exploitable dans un navigateur.
