--- a/www/html/js.html
+++ b/www/html/js.html
@@ -11,11 +11,9 @@
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
 <header>
-    <h1 class="top" id="top">
-        <a href="../index.html">
-            <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
-        </a>
-    </h1>
+    <h1 class="top" id="top"><a href="../index.html"> <img class="img-link"
+                                                           src="../img/logo_site.svg"
+                                                           alt="Logo du site 'coder pour les noobs'"> </a></h1>
 </header>
 <main class="side-by-side">
     <nav>
@@ -31,10 +29,9 @@
             <header class="prog-lang-title">
                 <h2>JavaScript</h2>
             </header>
-            <a href="https://fr.wikipedia.org/wiki/JavaScript">
-                <img class="img-link" src="../img/js_logo.svg" alt="une image du logo JavaScript">
-            </a>
-        </div>
+            <a href="https://fr.wikipedia.org/wiki/JavaScript"> <img class="img-link"
+                                                                     src="../img/js_logo.svg"
+                                                                     alt="une image du logo JavaScript"> </a></div>
         <article>
             <p>JavaScript est un langage de programmation de scripts principalement employé dans les pages web
                 interactives et à ce titre est une partie essentielle des applications web. Avec les langages
@@ -60,42 +57,30 @@
                 npm, avec environ 500 000 paquets en août 2017.
             </p>
             <ol>
-                <li>
-                    <a class="link" href="#Histoire">Histoire</a>
+                <li><a class="link" href="#Histoire">Histoire</a>
                     <ol>
                         <li><a class="link" href="#Debut">Debut</a></li>
-                        <li>
-                            <a class="link" href="#Standardisation">Standardisation</a>
+                        <li><a class="link" href="#Standardisation">Standardisation</a>
                             <ol>
-                                <li>
-                                    <a class="link" href="#Version-1">Version 1 : Naissance du standard ECMA-262</a>
+                                <li><a class="link" href="#Version-1">Version 1 : Naissance du standard ECMA-262</a>
                                 </li>
-                                <li>
-                                    <a class="link" href="#Version-2">Version 2 : Homogénéisation avec le standard ISO/CEI 16262</a>
-                                </li>
-                                <li>
-                                    <a class="link" href="#Version-3">Version 3 : Améliorations et constitution du langage</a>
-                                </li>
-                                <li>
-                                    <a class="link" href="#Version-4">Version 4 : L'étape inachevée</a>
-                                </li>
-                                <li>
-                                    <a class="link" href="#Version-5">Version 5 : Désambiguïsation et nouvelles fonctionnalités</a>
-                                </li>
-                                <li>
-                                    <a class="link" href="#Version-6">Version 6 : Amélioration du support et des fonctionnalités</a>
-                                </li>
-                                <li>
-                                    <a class="link" href="#Version-7">De la version 7 à nos jours : une adaptation permanente aux
-                                        outils du web</a>
-                                </li>
+                                <li><a class="link" href="#Version-2">Version 2 : Homogénéisation avec le standard
+                                    ISO/CEI 16262</a></li>
+                                <li><a class="link" href="#Version-3">Version 3 : Améliorations et constitution du
+                                    langage</a></li>
+                                <li><a class="link" href="#Version-4">Version 4 : L'étape inachevée</a></li>
+                                <li><a class="link" href="#Version-5">Version 5 : Désambiguïsation et nouvelles
+                                    fonctionnalités</a></li>
+                                <li><a class="link" href="#Version-6">Version 6 : Amélioration du support et des
+                                    fonctionnalités</a></li>
+                                <li><a class="link" href="#Version-7">De la version 7 à nos jours : une adaptation
+                                    permanente aux outils du web</a></li>
                             </ol>
                         </li>
                     </ol>
                 </li>
                 <li><a class="link" href="#Securite">Sécurité</a></li>
-                <li>
-                    <a class="link" href="#Concepts-de-programmation">Concepts de programmation</a>
+                <li><a class="link" href="#Concepts-de-programmation">Concepts de programmation</a>
                     <ol>
                         <li><a class="link" href="#Hello-world">Hello world</a></li>
                     </ol>
@@ -130,8 +115,8 @@
             </p>
             <p>Quelques jours avant sa sortie, Netscape change le nom de LiveScript pour JavaScript. Sun Microsystems et
                 Netscape étaient partenaires, et la machine virtuelle Java de plus en plus populaire. Ce changement de
-                nom servait les intérêts des deux sociétés. Le 4 décembre 1995 Netscape et Sun Microsystems annoncent
-                la sortie de JavaScript, décrit comme un complément à Java, dans un communiqué de presse commun. Cette
+                nom servait les intérêts des deux sociétés. Le 4 décembre 1995 Netscape et Sun Microsystems annoncent la
+                sortie de JavaScript, décrit comme un complément à Java, dans un communiqué de presse commun. Cette
                 initiative a contribué à créer auprès du public une certaine confusion entre les deux langages, proches
                 syntaxiquement mais pas du tout dans leurs concepts fondamentaux, et qui perdure encore de nos jours.
             </p>
@@ -140,12 +125,9 @@
                 client. Microsoft réagit alors en développant JScript, qu'il inclut ensuite dans Internet Explorer 3.0
                 en août 1996 pour la sortie de son navigateur.
             </p>
-            <p> «&nbsp;JavaScript&nbsp;» devient une marque déposée par Sun Microsystems aux États-Unis en mai
-                1997.
-            </p>
+            <p> «&nbsp;JavaScript&nbsp;» devient une marque déposée par Sun Microsystems aux États-Unis en mai 1997.</p>
             <h3 id="Standardisation">Standardisation</h3>
-            <p>Netscape soumet alors JavaScript à Ecma International pour standardisation.
-            </p>
+            <p>Netscape soumet alors JavaScript à Ecma International pour standardisation.</p>
             <h4 id="Version-1">Version 1 : Naissance du standard ECMA-262</h4>
             <p>Les travaux débutent en novembre 1996 et se terminent en juin 1997, donnant naissance à la 1re édition du
                 standard ECMA-262 qui spécifie le langage ECMAScript. Le standard est ensuite soumis à l'ISO/CEI et
@@ -156,8 +138,7 @@
                 international ISO/CEI 16262, aboutissant à la 2e édition du standard ECMA-262 en juin 1998.
             </p>
             <h4 id="Version-3">Version 3 : Améliorations et constitution du langage</h4>
-            <p>La 3e édition du standard ECMA-262 introduit :
-            </p>
+            <p>La 3e édition du standard ECMA-262 introduit :</p>
             <ul>
                 <li>des expressions rationnelles plus puissantes,</li>
                 <li>une amélioration de la manipulation des chaînes de caractères,</li>
@@ -202,15 +183,13 @@
                 l'introduction de l'opérateur d'exponentiation et d'une nouvelle méthode pour les prototypes de
                 tableaux, la 7e édition est publiée en juin 2016.
             </p>
-            <p>L'édition actuelle du standard ECMA-262 est la 11ème édition publiée en juin 2020.
-            </p>
+            <p>L'édition actuelle du standard ECMA-262 est la 11ème édition publiée en juin 2020.</p>
             <h2 id="Securite">Sécurité</h2>
             <p>JavaScript et la structure DOM des pages HTML/XML ont quelques failles de sécurité. En effet, des scripts
                 malveillants peuvent se cacher dans le code d'une page web et s'exécuter sur l'ordinateur cible de
                 l'utilisateur du Web.
             </p>
-            <p>Les fournisseurs de navigateurs web tentent de réduire ce risque avec deux restrictions :
-            </p>
+            <p>Les fournisseurs de navigateurs web tentent de réduire ce risque avec deux restrictions :</p>
             <ul>
                 <li>L'une est de faire exécuter ces scripts dans un espace à part des autres données (sandbox) dans
                     lequel seules des actions relatives au web (mouvements de souris, affichage de pixel,
@@ -221,8 +200,7 @@
                     mot de passe ou cookies reçus des autres sites visités.
                 </li>
             </ul>
-            <p>Les vulnérabilités de JavaScript sont bien souvent des brèches d'au moins l'un de ces deux principes.
-            </p>
+            <p>Les vulnérabilités de JavaScript sont bien souvent des brèches d'au moins l'un de ces deux principes.</p>
             <p>Certains sous-ensembles du langage Javascript tels que JavaScript—ADsafe ou Secure ECMAScript (SES)
                 fournissent de plus grands niveaux de sécurité, en particulier pour les scripts créés par des tierces
                 parties (notamment les publicités). Caja est un autre logiciel pour inclure et isoler de manière
@@ -244,20 +222,15 @@
             <p>Il est possible dans un script en langage Javascript, d'afficher le texte hello world sur la console de
                 debug de l’application. Ceci peut être utilisé par des développeurs en phase de mise au point. :
             </p>
-            <p class="code">window.console.log('Hello world');
-                <br>window.console.exp(hello world)
-                <br>// ou
-                <br>global.console.log('Hello world');
-                <br>window.console.log(hello world)
+            <p class="code">window.console.log('Hello world'); <br>window.console.exp(hello world) <br>// ou <br>global.console.log('Hello
+                world'); <br>window.console.log(hello world)
             </p>
-
             <p>Dans une application hôte d'un navigateur, console est une des méthodes de l'objet global window. Dans
                 d'autres applications hôtes comme Node.js, l'objet global est global. Les méthodes de l'objet global
                 étant accessibles sans préfixe, window et global sont facultatifs.
             </p>
-            <p>La syntaxe
-                <br><code>console.log('Hello world');</code><br>
-                aura donc exactement le même résultat en plus d'être compatible sur tous les environnements.
+            <p>La syntaxe <br><code>console.log('Hello world');</code><br> aura donc exactement le même résultat en plus
+                d'être compatible sur tous les environnements.
             </p>
             <h2 id="Utilisation">Utilisation</h2>
             <p>Le code JavaScript a besoin d'un objet global pour y rattacher les déclarations (variables et fonctions)
@@ -269,12 +242,12 @@
             <p>Du code JavaScript peut être intégré directement au sein des pages web, pour y être exécuté sur le poste
                 client. C'est alors le navigateur web qui prend en charge l'exécution de ces programmes appelés scripts.
             </p>
-            <p>Généralement, JavaScript sert à contrôler les données saisies dans des formulaires
-                <a class="link" href="html.html">HTML</a>, ou à interagir avec le document <a class="link"
-                                                                                              href="html.html">HTML</a>
-                via l'interface Document Object Model, fournie par le navigateur (on parle alors parfois de HTML
-                dynamique ou DHTML). Il est aussi utilisé pour réaliser des applications dynamiques, des transitions,
-                des animations ou manipuler des données réactives, à des fins ergonomiques ou cosmétiques.
+            <p>Généralement, JavaScript sert à contrôler les données saisies dans des formulaires <a class="link"
+                                                                                                     href="html.html">HTML</a>,
+                ou à interagir avec le document <a class="link" href="html.html">HTML</a> via l'interface Document
+                Object Model, fournie par le navigateur (on parle alors parfois de HTML dynamique ou DHTML). Il est
+                aussi utilisé pour réaliser des applications dynamiques, des transitions, des animations ou manipuler
+                des données réactives, à des fins ergonomiques ou cosmétiques.
             </p>
             <p>JavaScript n'est pas limité à la manipulation de documents <a class="link" href="html.html">HTML</a> et
                 peut aussi servir à manipuler des documents SVG, XUL et autres dialectes XML.
@@ -291,18 +264,16 @@
             <p>Pour vérifier dynamiquement si un objet (dans la version JavaScript utilisée lors de l'interprétation)
                 possède bien une méthode, on utilise souvent une construction du type :
             </p>
-            <p class="code">if (monObjet.methode && typeof monObjet.methode === 'function') {
-                <br>&emsp;monObjet.methode();
-                <br>}</p>
+            <p class="code">if (monObjet.methode && typeof monObjet.methode === 'function') { <br>&emsp;monObjet.methode();
+                <br>}
+            </p>
             <p>On vérifie ainsi que monObjet a bien une mise en œuvre de methode que l'on peut alors utiliser. Le plus
                 souvent, si un navigateur ne gère pas la methode de monObjet, il gère une méthode comparable methode2,
                 et on peut alors adapter le code JavaScript au navigateur qui l'exécute :
             </p>
-            <p class="code">if (typeof monObjet.methode === 'function') {
-                <br>&emsp;monObjet.methode();
-                <br>} else if (typeof monObjet.methode2 === 'function') {
-                <br>&emsp;monObjet.methode2();
-                <br>}</p>
+            <p class="code">if (typeof monObjet.methode === 'function') { <br>&emsp;monObjet.methode(); <br>} else if
+                (typeof monObjet.methode2 === 'function') { <br>&emsp;monObjet.methode2(); <br>}
+            </p>
             <p>Une autre méthode consiste à vérifier, côté serveur, le navigateur utilisé par le client et d'envoyer le
                 code correspondant. Cela n'est toutefois pas recommandable, car il est largement préférable de tester
                 directement l'existence, le comportement d'une fonction, d'une propriété, etc. plutôt que de faire des
@@ -336,30 +307,20 @@
                 la rapidité de traitement. Ainsi les navigateurs Firefox et IE l'intègrent respectivement dès les
                 versions 3.5 et 8.
             </p>
-            <p>Exemple de JSON :
-            </p>
-            <p class="code">
-                {
-                <br>&emsp;"clef1": "valeur",
-                <br>&emsp;"clef2": 12345,
-                <br>&emsp;"clef3": true,
-                <br>&emsp;"clef4": {
-                <br>&emsp;&emsp;"clef5": "valeur"
-                <br>&emsp;}
-                <br>}
+            <p>Exemple de JSON :</p>
+            <p class="code"> { <br>&emsp;"clef1": "valeur", <br>&emsp;"clef2": 12345, <br>&emsp;"clef3": true, <br>&emsp;"clef4":
+                { <br>&emsp;&emsp;"clef5": "valeur" <br>&emsp;} <br>}
             </p>
             <p>La structure est organisée par clef/valeurs. Les clefs doivent être entre guillemets doubles. Les valeurs
                 peuvent être :
             </p>
             <ul>
-                <li>une string (chaîne de caractères entre guillemets doubles)
-                </li>
+                <li>une string (chaîne de caractères entre guillemets doubles)</li>
                 <li>un nombre</li>
                 <li>un booléen (true ou false pour vrai ou faux)</li>
                 <li>une structure clef/valeur</li>
             </ul>
-            <p>Un JSON valide ne peut pas comporter de commentaires. Il existe des validateurs de JSON en ligne.
-            </p>
+            <p>Un JSON valide ne peut pas comporter de commentaires. Il existe des validateurs de JSON en ligne.</p>
             <h3 id="Autres-utilisations">Autres utilisations</h3>
             <h4 id="Sur-un-serveur-web">Sur un serveur web</h4>
             <p>JavaScript peut également être utilisé comme langage de programmation sur un serveur HTTP à l'image des
@@ -395,23 +356,18 @@
             <p>Les logiciels ImageJ et CaRMetal sont munis de consoles JavaScript, qui leur permettent d'écrire des
                 scripts dans un contexte graphique. Algobox utilise JavaScript pour la syntaxe de ses fonctions. H5P se
                 sert de <a class="link" href="html.html">HTML5</a> et Javascript pour faciliter la création de contenus
-                interactifs
-                en ligne.
+                interactifs en ligne.
             </p>
             <p>JavaScript est aussi utilisé dans un contenu BIFS pour l'exploitation des événements. Pour cela la
                 spécification BIFS fournit un nœud Script pour incorporer de l'ECMAScript.
             </p>
-            <p>La suite bureautique OpenOffice.org permet d'utiliser JavaScript comme langage de macros.
-            </p>
-            <p>JavaScript est aussi utilisable en shell ou avec les gadgets Vista.
-            </p>
+            <p>La suite bureautique OpenOffice.org permet d'utiliser JavaScript comme langage de macros.</p>
+            <p>JavaScript est aussi utilisable en shell ou avec les gadgets Vista.</p>
             <p>Le format graphique vectoriel SVG incorpore le langage ECMAscript pour créer des graphiques interactifs
                 directement exploitable dans un navigateur.
             </p>
-            <p>Enfin, JavaScript est également utilisé pour dynamiser le QML de la bibliothèque graphique Qt.
-            </p>
-            <a href="#top" class="to-top link">HAUT</a>
-        </article>
+            <p>Enfin, JavaScript est également utilisé pour dynamiser le QML de la bibliothèque graphique Qt.</p>
+            <a href="#top" class="to-top link">HAUT</a></article>
     </section>
 </main>
 <footer>copyright stuff</footer>
