--- a/www/index.html
+++ b/www/index.html
@@ -11,14 +11,14 @@
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
 <header>
-    <h1 class="top" id="top">
-        <a href="index.html">
-            <img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
-        </a>
-    </h1>
+    <h1 class="top" id="top"><a href="index.html"> <img class="img-link"
+                                                        src="img/logo_site.svg"
+                                                        alt="Logo du site 'coder pour les noobs'"> </a></h1>
 </header>
 <main>
-    <header><h2 id="titre-sommaire">Sommaire</h2></header>
+    <header>
+        <h2 id="titre-sommaire">Sommaire</h2>
+    </header>
     <nav id="sommaire">
         <ul class="list-option index-list">
             <li><a class="link" href="html/login.html">Log in</a></li>
@@ -30,9 +30,10 @@
     <form class="newsletter" method="post">
         <fieldset class="newsletterbox">
             <div class="contour">
-                <div class="champ-recherche">
-                    <label for="newsletter">Newsletter</label>
-                    <input class="newsletter" name="newsletter" id="newsletter" placeholder="Entrez votre email">
+                <div class="champ-recherche"><label for="newsletter">Newsletter</label> <input class="newsletter"
+                                                                                               name="newsletter"
+                                                                                               id="newsletter"
+                                                                                               placeholder="Entrez votre email">
                 </div>
                 <button class="bouton-nl"><a href="img/y2_web.mp4">Soumettre</a></button>
             </div>
