--- a/www/html/css.html
+++ b/www/html/css.html
@@ -523,8 +523,8 @@
                 </li>
             </ul>
             <h4 id="Propriétés">Propriétés et valeurs</h4>
-            <p> Les caractéristiques applicables aux boîtes CSS sont exprimées sous forme de couples <code>propriété:
-                valeur</code>.
+            <p> Les caractéristiques applicables aux boîtes CSS sont exprimées sous forme de couples
+                <code>propriété: valeur</code>.
             </p>
             <p>Les propriétés sont libellées à l'aide de mots-outils anglais tels que « width » (largeur), « font-size »
                 (taille de la police de caractères) ou « voice-volume » (volume sonore du rendu vocal).
