--- a/www/html/html.html
+++ b/www/html/html.html
@@ -53,8 +53,7 @@
                         </li>
                     </ol>
                 </li>
-                <li><a class="link" href="#Inopérabilité-de-HTML"> <span>4.</span> <span>Inopérabilité de HTML</span>
-                </a></li>
+                <li><a class="link" href="#Inopérabilité-de-HTML">Inopérabilité de HTML</a></li>
             </ol>
             <h2 id="Dénominations">Dénominations</h2>
             <p> L’anglais « Hypertext Markup Language » se traduit littéralement en « langage de balisage d’hypertexte
