Fix Update login html with name attributes

--- a/www/html/login.html
+++ b/www/html/login.html
@@ -43,7 +43,7 @@
             <p class="warning" id="username-warning" hidden>doit avoir au moins 6 caractères</p>
 
             <label for="userpwd">Mot de passe</label>
-            <input class="login-field" id="userpwd" type="password" placeholder="*" name="password">
+            <input class="login-field" id="userpwd" type="password" placeholder="*" name="userpwd">
             <p class="warning" id="userpwd-warning" hidden>
                 doit avoir au moins 8 caractères, dont au moins : 1 minuscule, 1 majuscule, 1 chiffre
             </p>
