--- a/www/html/html.html
+++ b/www/html/html.html
@@ -18,7 +18,7 @@
 <main class="side-by-side">
     <nav>
         <ul class="list-option">
-            <li><a class="link" href="login.html">Log&nbsp;in</a></li>
+            <li><a class="link" href="signup.html">Sign&nbsp;up</a></li>
             <li>HTML</li>
             <li><a class="link" href="css.html">CSS</a></li>
             <li><a class="link" href="js.html">JavaScript</a></li>
