--- a/www/html/js.html
+++ b/www/html/js.html
@@ -18,14 +18,14 @@
 <main class="side-by-side">
     <nav>
         <ul class="list-option">
-            <li><a class="link" href="login.html">Log&nbsp;in</a></li>
+            <li><a class="link" href="signup.html">Sign&nbsp;up</a></li>
             <li><a class="link" href="html.html">HTML</a></li>
             <li><a class="link" href="css.html">CSS</a></li>
             <li>JavaScript</li>
         </ul>
     </nav>
     <section>
-        <div class="side-by-side" id="pas-si-large">
+        <div class="side-by-side">
             <header class="prog-lang-title">
                 <h2>JavaScript</h2>
             </header>
