--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     </header>
     <nav id="sommaire">
         <ul class="list-option index-list">
-            <li><a class="link" href="html/login.html">Log in</a></li>
+            <li><a class="link" href="html/signup.html">Sign up</a></li>
             <li><a class="link" href="html/html.html">HTML</a></li>
             <li><a class="link" href="html/css.html">CSS</a></li>
             <li><a class="link" href="html/js.html">JavaScript</a></li>
