--- a/www/html/js.html
+++ b/www/html/js.html
@@ -48,13 +48,13 @@
                 sous le nom d'ECMAScript en juin 1997 par Ecma International dans le standard ECMA-262. La version en
                 vigueur de ce standard depuis juin 2020 est la 11e édition.
             </p>
-            <p>C'est un langage orienté objet à prototype : les bases du langage et ses principales interfaces sont
-                fournies par des objets. Cependant, à la différence d'un langage orienté objets, les objets de base ne
-                sont pas des instances de classes. En outre, les fonctions sont des objets de première classe. Le
+            <p>C'est un langage orienté objet <em>à prototype</em> : les bases du langage et ses principales interfaces
+                sont fournies par des objets. Cependant, à la différence d'un langage orienté objets, les objets de base
+                ne sont pas des instances de classes. En outre, les fonctions sont des objets de première classe. Le
                 langage supporte le paradigme objet, impératif et fonctionnel.
             </p>
-            <p> JavaScript est le langage possédant le plus large écosystème grâce à son gestionnaire de dépendances
-                npm, avec environ 500 000 paquets en août 2017.
+            <p> JavaScript est le langage possédant <strong>le plus large écosystème</strong> grâce à son gestionnaire
+                de dépendances npm, avec environ <mark>500 000 paquets en août 2017</mark>.
             </p>
             <ol>
                 <li><a class="link" href="#Histoire">Histoire</a>
