--- a/www/html/html.html
+++ b/www/html/html.html
@@ -10,10 +10,10 @@
 <noscript>
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
-<header>
-    <h1 class="top" id="top"><a href="../index.html"> <img class="img-link"
-                                                           src="../img/logo_site.svg"
-                                                           alt="Logo du site 'coder pour les noobs'"> </a></h1>
+<header id="top-html" class="top">
+    <a href="../index.html">
+        <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+    </a>
 </header>
 <main class="side-by-side">
     <nav>
@@ -26,8 +26,8 @@
     </nav>
     <section>
         <div class="side-by-side" id="pas-si-large">
-            <header class="prog-lang-title">
-                <h2>HyperText Markup Language</h2>
+            <header>
+                <h1>HyperText Markup Language</h1>
             </header>
             <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language"> <img class="img-link"
                                                                                     src="../img/html_logo.svg"
@@ -332,7 +332,7 @@
                 de style de texte, qui permet d’indiquer notamment la police de caractères souhaitée pour l’affichage,
                 sa taille ou sa couleur.
             </p>
-            <a href="#top" class="to-top link">HAUT</a></article>
+            <a href="#top-html" class="to-top link">HAUT</a></article>
     </section>
 </main>
 <footer>copyright stuff</footer>
