--- a/www/html/js.html
+++ b/www/html/js.html
@@ -10,10 +10,10 @@
 <noscript>
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
-<header>
-    <h1 class="top" id="top"><a href="../index.html"> <img class="img-link"
-                                                           src="../img/logo_site.svg"
-                                                           alt="Logo du site 'coder pour les noobs'"> </a></h1>
+<header id="top-js" class="top">
+    <a href="../index.html">
+        <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+    </a>
 </header>
 <main class="side-by-side">
     <nav>
@@ -26,8 +26,8 @@
     </nav>
     <section>
         <div class="side-by-side">
-            <header class="prog-lang-title">
-                <h2>JavaScript</h2>
+            <header>
+                <h1>JavaScript</h1>
             </header>
             <a href="https://fr.wikipedia.org/wiki/JavaScript"> <img class="img-link"
                                                                      src="../img/js_logo.svg"
@@ -367,7 +367,7 @@
                 directement exploitable dans un navigateur.
             </p>
             <p>Enfin, JavaScript est également utilisé pour dynamiser le QML de la bibliothèque graphique Qt.</p>
-            <a href="#top" class="to-top link">HAUT</a></article>
+            <a href="#top-js" class="to-top link">HAUT</a></article>
     </section>
 </main>
 <footer>copyright stuff</footer>
