--- a/www/html/signup.html
+++ b/www/html/signup.html
@@ -10,10 +10,11 @@
 <noscript>
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
-<header>
-    <h1 class="top" id="top"><a href="../index.html"> <img class="img-link"
-                                                           src="../img/logo_site.svg"
-                                                           alt="Logo du site 'coder pour les noobs'"> </a></h1>
+<header class="top">
+    <a href="../index.html">
+        <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+    </a>
+    <h1>Sign up</h1>
 </header>
 <main class="side-by-side">
     <nav>
@@ -35,7 +36,8 @@
             <p class="warning" id="firstname-warning" hidden>doit être non vide</p>
 
             <label for="birthdate">Date de naissance</label>
-            <input class="signup-field" id="birthdate" type="text" placeholder="(optionnel) jj/mm/aaaa" name="birthdate">
+            <input class="signup-field" id="birthdate" type="text" placeholder="(optionnel) jj/mm/aaaa"
+                   name="birthdate">
             <p class="warning" id="birthdate-warning" hidden>peut être vide, ou doit être au format jj/mm/aaaa</p>
 
             <label for="username">Nom d'utilisateur</label>
