--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,12 @@
 <noscript>
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
-<header>
-    <h1 class="top" id="top"><a href="index.html"> <img class="img-link"
-                                                        src="img/logo_site.svg"
-                                                        alt="Logo du site 'coder pour les noobs'"> </a></h1>
+<header class="top">
+    <img src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
 </header>
 <main>
     <header>
-        <h2 id="titre-sommaire">Sommaire</h2>
+        <h1 id="titre-sommaire">Sommaire</h1>
     </header>
     <nav id="sommaire">
         <ul class="list-option index-list">
