--- a/www/html/css.html
+++ b/www/html/css.html
@@ -10,10 +10,10 @@
 <noscript>
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
-<header>
-    <h1 class="top" id="top"><a href="../index.html"> <img class="img-link"
-                                                           src="../img/logo_site.svg"
-                                                           alt="Logo du site 'coder pour les noobs'"> </a></h1>
+<header id="top-css" class="top">
+    <a href="../index.html">
+        <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+    </a>
 </header>
 <main class="side-by-side">
     <nav>
@@ -26,8 +26,8 @@
     </nav>
     <section>
         <div class="side-by-side" id="pas-si-large">
-            <header class="prog-lang-title">
-                <h2>Cascading Style Sheets</h2>
+            <header>
+                <h1>Cascading Style Sheets</h1>
             </header>
             <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade"><img class="img-link"
                                                                                       src="../img/css_logo.svg"
@@ -675,7 +675,7 @@
                                                                                                 href="#BEM">BEM</a>
                 (bloc, élément, modificateur).
             </p>
-            <a href="#top" class="to-top link">HAUT</a></article>
+            <a href="#top-css" class="to-top link">HAUT</a></article>
     </section>
 </main>
 <footer>copyright stuff</footer>
