Remove unused class

--- a/www/html/html.html
+++ b/www/html/html.html
@@ -25,7 +25,7 @@
         </ul>
     </nav>
     <section>
-        <div class="side-by-side" id="pas-si-large">
+        <div class="side-by-side">
             <header>
                 <h1>HyperText Markup Language</h1>
             </header>
