--- a/www/html/html.html
+++ b/www/html/html.html
@@ -39,12 +39,12 @@
             </p>
             <ol>
                 <li><a class="link" href="#Dénominations">Dénominations</a></li>
-                <li><a class="link" href="#Evolution-du-langage">Evolution du langage</a></li>
+                <li><a class="link" href="#Evolution-du-langage">&Eacute;volution du langage</a></li>
                 <li><a class="link" href="#Description-de-HTML">Description de HTML</a>
                     <ol>
                         <li><a class="link" href="#Syntaxe-de-HTML">Syntaxe de HTML</a></li>
                         <li><a class="link" href="#Structure-des-documents-HTML">Structure des documents HTML</a></li>
-                        <li><a class="link" href="#Eléments-de-HTML">Eléments de HTML</a></li>
+                        <li><a class="link" href="#Eléments-de-HTML">&Eacute;léments de HTML</a></li>
                         <li><a class="link" href="#Attributs-de-HTML">Attributs de HTML </a></li>
                         <li><a class="link" href="#Jeux-de-caractères">Jeux de caractères</a>
                             <ol>
@@ -64,12 +64,12 @@
                 tronquée à trois lettres, une limitation que l’on trouve sur d’anciens systèmes d’exploitation de
                 Microsoft.
             </p>
-            <h2 id="Evolution-du-langage">Evolution du langage</h2>
+            <h2 id="Evolution-du-langage">&Eacute;volution du langage</h2>
             <p> Durant la première moitié des années 1990, avant l'apparition des technologies Web comme le langage <a
                     class="link"
                     href="js.html">JavaScript</a> (JS), les <a class="link" href="css.html">feuilles de style en
                 cascade</a> (CSS) et le Document Object Model (DOM), l'évolution de HTML a dicté l'évolution du World
-                Wide Web. Depuis 1997 et HTML 4, l'évolution de HTML a fortement ralenti; dix ans plus tard, HTML 4
+                Wide Web. Depuis 1997 et HTML 4, l'évolution de HTML a fortement ralenti ; dix ans plus tard, HTML 4
                 reste utilisé dans les pages web. En 2008, la spécification du HTML5 est à l'étude et devient d'usage
                 courant dans la seconde moitié des années 2010.
             </p>
@@ -103,7 +103,7 @@
                 dérivée pour l’application des feuilles de style en cascade où chaque élément peut avoir un fond, un
                 bord et une marge propres.
             </p>
-            <h3 id="Eléments-de-HTML">Eléments de HTML</h3>
+            <h3 id="Eléments-de-HTML">&Eacute;léments de HTML</h3>
             <p> La version 4 de HTML décrit 91 éléments. En suivant la spécification de HTML 4, les fonctionnalités
                 implémentées par HTML peuvent être réparties ainsi :
             <h4>Structure générale d'un document HTML</h4>
