Factor out transition into its own class

--- a/www/html/html.html
+++ b/www/html/html.html
@@ -10,7 +10,7 @@
 <noscript>
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
-<header id="top-html" class="top">
+<header id="top-html" class="top ease-out">
     <a href="../index.html">
         <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
     </a>
