--- a/www/html/css.html
+++ b/www/html/css.html
@@ -10,7 +10,7 @@
 <noscript>
     <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
-<header id="top-css" class="top">
+<header id="top-css" class="top ease-out">
     <a href="../index.html">
         <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
     </a>
